fixed spacing

--- a/style.css
+++ b/style.css
@@ -162,6 +162,8 @@ body, html {
 }
   
 .modal-body {
+    display: flex;
+    justify-content: center;
     padding: 2px 16px;
     background-color: rgb(30, 30, 30);
     margin-top: 10%;
@@ -171,7 +173,6 @@ body, html {
     color: white;
     background-color: rgb(30, 30, 30);
     font-size: 1em;
-    margin-left: 30%;
     text-decoration: none;
     border:1px solid white;
     cursor: pointer;
